RESOLVED FIXED 193142
[WPE][GTK] WebKitWebView::is-controlled-by-automation documentation is incorrect
https://bugs.webkit.org/show_bug.cgi?id=193142
Summary [WPE][GTK] WebKitWebView::is-controlled-by-automation documentation is incorrect
Michael Catanzaro
Reported 2019-01-04 08:39:34 PST
The documentation of WebKitWebView::is-controlled-by-automation says: """This should only be used when creating a new WebKitWebView as a response to “create-web-view” signal request.""" But this is wrong. According to Carlos Garcia, it needs to always be set when creating webviews in automation mode.
Attachments
Lauro Moura
Comment 1 2024-11-15 04:05:08 PST
EWS
Comment 2 2024-11-15 04:20:45 PST
Committed 286636@main (d2496474236f): <https://commits.webkit.org/286636@main> Reviewed commits have been landed. Closing PR #36689 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-15 04:21:16 PST
Note You need to log in before you can comment on or make changes to this bug.