[WPE][GTK] WebKitWebView::is-controlled-by-automation documentation is incorrect https://bugs.webkit.org/show_bug.cgi?id=193142

Reviewed by Carlos Garcia Campos.

Clarify comments, alongside extra info in the WebKitWebView::create
signal docs.

* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkit_web_view_class_init):

Canonical link: https://commits.webkit.org/286636@main